# IoT-secure-home

./: CMakeLists.txt  README.md  code.c  install.sh
